--- a/BIB/bibM.bib
+++ b/BIB/bibM.bib
@@ -19,14 +19,14 @@
 @InBook{2024-Montevil-Normal-Pathologique-80ans,
   author    = {Montévil, Maël},
   editor    = {Pierre-Frédéric Daled and Mathias Girel and Nathalie Queyroux},
-  publisher = {Rued'Ulm},
+  publisher = {Rue d'Ulm},
   title     = {Normativité et disruption du vivant dans l’Anthropocène},
   year      = {2024},
   address   = {Paris},
   day       = {17},
   isbn      = {9782728808663},
   month     = {05},
-  series    = {Les @rencontres de Normale Sup'},
+  series    = {Les rencontres de Normale Sup'},
   abstract  = {Quatre-vingts ans après, Le Normal et le Pathologique est une référence
 majeure en philosophie mais qu’en est-il en biologie et en médecine ?
 Plus précisément, quelle est aujourd’hui la pertinence des concepts de
