--- a/src/assets/bib/2024-Montevil-Normal-Pathologique-80ans.bib
+++ b/src/assets/bib/2024-Montevil-Normal-Pathologique-80ans.bib
@@ -3,7 +3,7 @@
   author	= {Montévil, Maël},
   editor	= {Pierre-Frédéric Daled and Mathias Girel and Nathalie
 		  Queyroux},
-  publisher	= {Rued'Ulm},
+  publisher	= {Rue d'Ulm},
   title		= {Normativité et disruption du vivant dans
 		  l’Anthropocène},
   year		= {2024},
@@ -11,7 +11,7 @@
   day		= {17},
   isbn		= {9782728808663},
   month		= {05},
-  series	= {Les @rencontres de Normale Sup'},
+  series	= {Les rencontres de Normale Sup'},
   abstract	= {Quatre-vingts ans après, Le Normal et le Pathologique est
 		  une référence majeure en philosophie mais qu’en est-il
 		  en biologie et en médecine ? Plus précisément, quelle
