--- a/BIB/bibM.bib
+++ b/BIB/bibM.bib
@@ -177,7 +177,7 @@ Then, randomness operates at the level of possibilities themselves and is the ba
 
 
 @InBook{2023-Montevil-Stiegler,
-  author    = {Ma{\"e}l Mont{\'e}vil},
+  author    = {Maël Montévil},
   editor    = {Shaj Mohan and Jean-Luc Nancy},
   publisher = {Bloomsbury Publishing Plc},
   title     = {Bernard Stiegler: Friendship and Fellowship},
@@ -188,7 +188,7 @@ Then, randomness operates at the level of possibilities themselves and is the ba
   isbn      = {9781350329041},
   month     = {02},
   note      = {Description based on publisher supplied metadata and other sources.},
-  abstract  = {"What I love, and those whom I love, you, that is to say us in so far as we are capable of forming a we, all this I love, and I love them, and I love you infinitely" (Bernard Steigler April 1952- August 2020).
+  abstract  = {What I love, and those whom I love, you, that is to say us in so far as we are capable of forming a we, all this I love, and I love them, and I love you infinitely (Bernard Steigler April 1952- August 2020).
 <br>
 When Bernard Stiegler writes "I love you" in the quote above, he openly provokes us to question or experience the meaning or contact of these words. He also invites us to question the relationship between a thinker's life and their thought. For Stiegler, they were inextricable. His life was one that focused on friendship but not friendships at a purely social level but ones that produced philosophy, politics, and existential truths.
 <br>
@@ -197,7 +197,6 @@ Bringing together scholars who knew Stiegler, including Shaj Mohan, Achille Mbem
   language  = {en},
   pagetotal = {1169},
   ppn_gvk   = {1880540932},
-  subtitle  = {Philosopher of Friendship},
   url       = {https://www.bloomsbury.com/uk/on-bernard-stiegler-9781350329034/},
 }
 
