--- a/src/assets/bib/2023-Montevil-Stiegler.bib
+++ b/src/assets/bib/2023-Montevil-Stiegler.bib
@@ -1,6 +1,6 @@
 
 @InBook{	  2023-montevil-stiegler,
-  author	= {Ma{\"e}l Mont{\'e}vil},
+  author	= {Maël Montévil},
   editor	= {Shaj Mohan and Jean-Luc Nancy},
   publisher	= {Bloomsbury Publishing Plc},
   title		= {Bernard Stiegler: Friendship and Fellowship},
@@ -12,9 +12,9 @@
   month		= {02},
   note		= {Description based on publisher supplied metadata and other
 		  sources.},
-  abstract	= {"What I love, and those whom I love, you, that is to say
-		  us in so far as we are capable of forming a we, all this I
-		  love, and I love them, and I love you infinitely" (Bernard
+  abstract	= {What I love, and those whom I love, you, that is to say us
+		  in so far as we are capable of forming a we, all this I
+		  love, and I love them, and I love you infinitely (Bernard
 		  Steigler April 1952- August 2020). <br> When Bernard
 		  Stiegler writes "I love you" in the quote above, he openly
 		  provokes us to question or experience the meaning or
@@ -34,7 +34,6 @@
   language	= {en},
   pagetotal	= {1169},
   ppn_gvk	= {1880540932},
-  subtitle	= {Philosopher of Friendship},
   url		= {https://www.bloomsbury.com/uk/on-bernard-stiegler-9781350329034/}
 }
 
