--- a/src/assets/bib/submitted-Chollat-Montevil-FEP-entropy.bib
+++ b/src/assets/bib/submitted-Chollat-Montevil-FEP-entropy.bib
@@ -4,7 +4,7 @@
   title		= {What drives the brain ? Organizational changes, FEP and
 		  anti-entropy},
   journal	= { },
-  year		= {submitted},
+  year		= {Submitted},
   abstract	= { The free-energy principle (FEP) furnishes a
 		  computational, physical and teleological theory for
 		  understanding biological organization as cognitive agent
