--- a/src/assets/bib/submitted-Montevil-Disruption-Phenology.bib
+++ b/src/assets/bib/submitted-Montevil-Disruption-Phenology.bib
@@ -4,7 +4,7 @@
   title		= {Disruption of biological processes in the Anthropocene:
 		  the case of phenological mismatch},
   journal	= { },
-  year		= {submitted},
+  year		= {Submitted},
   abstract	= {Biologists increasingly report anthropogenic disruptions
 		  of both organisms and ecosystems, suggesting that these
 		  processes are a fundamental, qualitative component of the
