--- a/src/assets/bib/bibM.bib
+++ b/src/assets/bib/bibM.bib
@@ -177,7 +177,7 @@ Then, randomness operates at the level of possibilities themselves and is the ba
 
 
 @InBook{2023-Montevil-Stiegler,
-  author    = {Ma{\"e}l Mont{\'e}vil},
+  author    = {Maël Montévil},
   editor    = {Shaj Mohan and Jean-Luc Nancy},
   publisher = {Bloomsbury Publishing Plc},
   title     = {Bernard Stiegler: Friendship and Fellowship},
@@ -188,7 +188,7 @@ Then, randomness operates at the level of possibilities themselves and is the ba
   isbn      = {9781350329041},
   month     = {02},
   note      = {Description based on publisher supplied metadata and other sources.},
-  abstract  = {"What I love, and those whom I love, you, that is to say us in so far as we are capable of forming a we, all this I love, and I love them, and I love you infinitely" (Bernard Steigler April 1952- August 2020).
+  abstract  = {What I love, and those whom I love, you, that is to say us in so far as we are capable of forming a we, all this I love, and I love them, and I love you infinitely (Bernard Steigler April 1952- August 2020).
 <br>
 When Bernard Stiegler writes "I love you" in the quote above, he openly provokes us to question or experience the meaning or contact of these words. He also invites us to question the relationship between a thinker's life and their thought. For Stiegler, they were inextricable. His life was one that focused on friendship but not friendships at a purely social level but ones that produced philosophy, politics, and existential truths.
 <br>
@@ -197,7 +197,6 @@ Bringing together scholars who knew Stiegler, including Shaj Mohan, Achille Mbem
   language  = {en},
   pagetotal = {1169},
   ppn_gvk   = {1880540932},
-  subtitle  = {Philosopher of Friendship},
   url       = {https://www.bloomsbury.com/uk/on-bernard-stiegler-9781350329034/},
 }
 
@@ -419,7 +418,7 @@ url={http://links-series.com/n-5-6-marcel-proust/},
 author = {Marie Chollat-Namy and Maël Montévil },
 title = {What drives the brain ? Organizational changes, FEP and anti-entropy},
 journal = { },
-year = {submitted},
+year = {Submitted},
 abstract = { The free-energy principle (FEP) furnishes a computational, physical and teleological theory for understanding biological organization as cognitive agent minimizing their entropy in relation to their environment. Is minimizing entropy the first principle driving all dynamics of cognition ?  Is it enough to account for organizational changes in a open-ended way ? After a general presentation of the literature on FEP, we then turn to the paradoxical case of the brain under the influence of psychedelics, where FEP is challenged by an increased cerebral entropy, which induces organizational changes of the cognition. From on this paradox, we then identify some limits of the FEP, notably applying concepts of information, optimization and predefined phase space to biology, which does not account for strong organizational changes. We therefore propose an organicist theoretical alternative with the concept of anti-entropy, explaining how a biological system's disorganization can enable its "unprestatable" reorganization and so its open-ended evolution. We finally rediscuss the concept of activity and passivity of living beings and the notion that their default state corresponds to an activity.}
 }
 
@@ -427,7 +426,7 @@ abstract = { The free-energy principle (FEP) furnishes a computational, physical
 author = {Montévil, Maël},
 title = {Disruption of biological processes in the Anthropocene: the case of phenological mismatch},
 journal = { },
-year = {submitted},
+year = {Submitted},
 abstract = {Biologists increasingly report anthropogenic disruptions of both organisms and ecosystems, suggesting that these processes are a fundamental, qualitative component of the Anthropocene crisis, seemingly generating disorder. Nonetheless, the notion of disruption has not yet been theorized as such in biology. To progress on this matter, we build on a specific case. Relatively minor temperature changes disrupt plant-pollinator synchrony, tearing apart the web of life. Understanding this phenomenon requires a specific rationale since models describing them use both historical and systemic reasoning. Specifically, history justifies that the system is initially in a narrow part of the possibility space where it is viable, and the disruption randomizes this configuration. Building on this rationale, we develop a formal framework inspired by Boltzmann's entropy. This framework defines the randomization of the system and leads to analyze its consequences systematically. Notably, maximum randomization does not lead to the complete collapse of the ecosystem. Moreover, pollinators' robustness mostly increases viability for low randomizations, while resilience enhances viability after high randomizations. Applying this framework to empirical networks, we show historical trends depending on latitude, providing further evidence of climate change's impact on ecosystems via phenology changes. These results lead to an initial definition of disruption in ecology.  When a specific historical outcome contributes to a system's viability, disruption is the randomization of this outcome,  decreasing this viability. },
   url={https://hal.archives-ouvertes.fr/hal-03574022}
 }
