--- a/src/assets/bib/2025-Montevil-Disruption-Phenology.bib
+++ b/src/assets/bib/2025-Montevil-Disruption-Phenology.bib
@@ -1,10 +1,10 @@
 
-@Article{	  submitted-montevil-disruption-phenology,
+@Article{	  2025-montevil-disruption-phenology,
   author	= {Montévil, Maël},
   title		= {Disruption of biological processes in the Anthropocene:
 		  the case of phenological mismatch},
-  journal	= { },
-  year		= {Submitted},
+  journal	= {Acta Biotheoretica },
+  year		= {2025},
   abstract	= {Biologists increasingly report anthropogenic disruptions
 		  of both organisms and ecosystems, suggesting that these
 		  processes are a fundamental, qualitative component of the
