--- a/BIB/bibM.bib
+++ b/BIB/bibM.bib
@@ -428,7 +428,8 @@ title = {Disruption of biological processes in the Anthropocene: the case of phe
 journal = {Acta Biotheoretica },
 year = {2025},
 abstract = {Biologists increasingly report anthropogenic disruptions of both organisms and ecosystems, suggesting that these processes are a fundamental, qualitative component of the Anthropocene crisis, seemingly generating disorder. Nonetheless, the notion of disruption has not yet been theorized as such in biology. To progress on this matter, we build on a specific case. Relatively minor temperature changes disrupt plant-pollinator synchrony, tearing apart the web of life. Understanding this phenomenon requires a specific rationale since models describing them use both historical and systemic reasoning. Specifically, history justifies that the system is initially in a narrow part of the possibility space where it is viable, and the disruption randomizes this configuration. Building on this rationale, we develop a formal framework inspired by Boltzmann's entropy. This framework defines the randomization of the system and leads to analyze its consequences systematically. Notably, maximum randomization does not lead to the complete collapse of the ecosystem. Moreover, pollinators' robustness mostly increases viability for low randomizations, while resilience enhances viability after high randomizations. Applying this framework to empirical networks, we show historical trends depending on latitude, providing further evidence of climate change's impact on ecosystems via phenology changes. These results lead to an initial definition of disruption in ecology.  When a specific historical outcome contributes to a system's viability, disruption is the randomization of this outcome,  decreasing this viability. },
-  url={https://hal.archives-ouvertes.fr/hal-03574022}
+  url={https://hal.archives-ouvertes.fr/hal-03574022},
+  doi={10.1007/s10441-025-09496-2}
 }
 
 @Article{2016-SLN-Conclusion-Century-Organism,
