--- a/src/assets/bib/2017-Montevil-Garson-Functions.bib
+++ b/src/assets/bib/2017-Montevil-Garson-Functions.bib
@@ -5,7 +5,7 @@
   title		= {Philosophical Accounts of Biological Functions: Justin
 		  Garson (2016) A Critical Overview of Biological Functions.
 		  Springer International Publishing, Dordrecht. ISBN:
-		  978-3-319-32020-5, 113 pages, price: $54.99 (paperback)},
+		  978-3-319-32020-5, 113 pages, price: {\$}54.99 (paperback)},
   year		= {2017},
   day		= {26},
   issn		= {1573-1901},
