--- a/src/assets/bib/2023-Montevil-Stiegler.bib
+++ b/src/assets/bib/2023-Montevil-Stiegler.bib
@@ -16,7 +16,7 @@
 		  in so far as we are capable of forming a we, all this I
 		  love, and I love them, and I love you infinitely (Bernard
 		  Steigler April 1952- August 2020). <br> When Bernard
-		  Stiegler writes "I love you" in the quote above, he openly
+		  Stiegler writes 'I love you' in the quote above, he openly
 		  provokes us to question or experience the meaning or
 		  contact of these words. He also invites us to question the
 		  relationship between a thinker's life and their thought.
