--- a/src/assets/bib/2025-Montevil-Disruption-Phenology.bib
+++ b/src/assets/bib/2025-Montevil-Disruption-Phenology.bib
@@ -35,5 +35,6 @@
 		  contributes to a system's viability, disruption is the
 		  randomization of this outcome, decreasing this viability.
 		  },
-  url		= {https://hal.archives-ouvertes.fr/hal-03574022}
+  url		= {https://hal.archives-ouvertes.fr/hal-03574022},
+  doi		= {10.1007/s10441-025-09496-2}
 }
