--- a/src/assets/bib/bibM.bib
+++ b/src/assets/bib/bibM.bib
@@ -14,7 +14,18 @@
   isbn={9782376620891}
 }
 
-
+@article{2025-Stiegler-Montevil-Entropy, 
+  title={Towards a New Industrial Revolution? Entropy and its Challenges}, 
+  volume={2},  
+  url={https://technophany.philosophyandtechnology.network/article/view/19608},  DOI={10.54195/technophany.19608}, 
+  abstract={This is a transcribed and translated  a podcast of the interview concerning the 1st chapter of the book Biurquer: Il n’y a pas d’alternative (Bifurcate: There Is No Alternative) on the scientific, technological and political stakes of the notion of entropy. The discussion took place between Bernard Stiegler, Maël Montévil, Marie Chollat-Namy and Victor Chaix, on the 1st of July 2020.}, 
+  number={2}, 
+  journal={Technophany, A Journal for Philosophy and Technology}, author={Stiegler, Bernard and Montevil, Maël and Chaix, Victor and Chollat-Namy, Marie}, 
+  editor={White, Joel}, 
+  year={2025}, 
+  month={Jan.}, 
+  pages={1–28} 
+}
 
 @InBook{2024-Montevil-Normal-Pathologique-80ans,
   author    = {Montévil, Maël},
@@ -157,6 +168,32 @@ author={Maël Montévil},
 Nous insisterons sur les conséquences de ces disruptions concernant le développement humain, biologique et psychique, et nous indiquerons des réponses possibles face à ces disruptions. }
 }
 
+
+
+@InBook{2023-Montevil-Stiegler,
+  author    = {Maël Montévil},
+  editor    = {Shaj Mohan and Jean-Luc Nancy},
+  publisher = {Bloomsbury Publishing Plc},
+  title     = {Bernard Stiegler: Friendship and Fellowship},
+  year      = {2024},
+  address   = {London},
+  day       = {08},
+  edition   = {1st ed.},
+  isbn      = {9781350329041},
+  month     = {02},
+  note      = {Description based on publisher supplied metadata and other sources.},
+  abstract  = {What I love, and those whom I love, you, that is to say us in so far as we are capable of forming a we, all this I love, and I love them, and I love you infinitely (Bernard Steigler April 1952- August 2020).
+<br>
+When Bernard Stiegler writes 'I love you' in the quote above, he openly provokes us to question or experience the meaning or contact of these words. He also invites us to question the relationship between a thinker's life and their thought. For Stiegler, they were inextricable. His life was one that focused on friendship but not friendships at a purely social level but ones that produced philosophy, politics, and existential truths.
+<br>
+Bringing together scholars who knew Stiegler, including Shaj Mohan, Achille Mbembe, Divya Dwivedi, Peter Szendy, and Emily Apter, this volume provides an original - and personal - insight into his life and philosophy. Each piece gives a sense of the wide range of Stiegler's work and how it affected the praxis of the philosopher in different parts of the world.},
+  booktitle = {On Bernard Stiegler - Philosopher of Friendship},
+  language  = {en},
+  pagetotal = {1169},
+  ppn_gvk   = {1880540932},
+  url       = {https://www.bloomsbury.com/uk/on-bernard-stiegler-9781350329034/},
+}
+
 @InBook{2023-Montevil-chance-randomness-biology,
   author    = {Ma{\"e}l Mont{\'e}vil},
   editor    = {Anne Duprat and Alison James and Divya Dwivedi},
@@ -176,29 +213,6 @@ Then, randomness operates at the level of possibilities themselves and is the ba
 
 
 
-@InBook{2023-Montevil-Stiegler,
-  author    = {Maël Montévil},
-  editor    = {Shaj Mohan and Jean-Luc Nancy},
-  publisher = {Bloomsbury Publishing Plc},
-  title     = {Bernard Stiegler: Friendship and Fellowship},
-  year      = {2024},
-  address   = {London},
-  day       = {08},
-  edition   = {1st ed.},
-  isbn      = {9781350329041},
-  month     = {02},
-  note      = {Description based on publisher supplied metadata and other sources.},
-  abstract  = {What I love, and those whom I love, you, that is to say us in so far as we are capable of forming a we, all this I love, and I love them, and I love you infinitely (Bernard Steigler April 1952- August 2020).
-<br>
-When Bernard Stiegler writes "I love you" in the quote above, he openly provokes us to question or experience the meaning or contact of these words. He also invites us to question the relationship between a thinker's life and their thought. For Stiegler, they were inextricable. His life was one that focused on friendship but not friendships at a purely social level but ones that produced philosophy, politics, and existential truths.
-<br>
-Bringing together scholars who knew Stiegler, including Shaj Mohan, Achille Mbembe, Divya Dwivedi, Peter Szendy, and Emily Apter, this volume provides an original - and personal - insight into his life and philosophy. Each piece gives a sense of the wide range of Stiegler's work and how it affected the praxis of the philosopher in different parts of the world.},
-  booktitle = {On Bernard Stiegler - Philosopher of Friendship},
-  language  = {en},
-  pagetotal = {1169},
-  ppn_gvk   = {1880540932},
-  url       = {https://www.bloomsbury.com/uk/on-bernard-stiegler-9781350329034/},
-}
 
 
 @InBook{2023-Montevil-Stiegler-memory-future,
@@ -428,7 +442,8 @@ title = {Disruption of biological processes in the Anthropocene: the case of phe
 journal = {Acta Biotheoretica },
 year = {2025},
 abstract = {Biologists increasingly report anthropogenic disruptions of both organisms and ecosystems, suggesting that these processes are a fundamental, qualitative component of the Anthropocene crisis, seemingly generating disorder. Nonetheless, the notion of disruption has not yet been theorized as such in biology. To progress on this matter, we build on a specific case. Relatively minor temperature changes disrupt plant-pollinator synchrony, tearing apart the web of life. Understanding this phenomenon requires a specific rationale since models describing them use both historical and systemic reasoning. Specifically, history justifies that the system is initially in a narrow part of the possibility space where it is viable, and the disruption randomizes this configuration. Building on this rationale, we develop a formal framework inspired by Boltzmann's entropy. This framework defines the randomization of the system and leads to analyze its consequences systematically. Notably, maximum randomization does not lead to the complete collapse of the ecosystem. Moreover, pollinators' robustness mostly increases viability for low randomizations, while resilience enhances viability after high randomizations. Applying this framework to empirical networks, we show historical trends depending on latitude, providing further evidence of climate change's impact on ecosystems via phenology changes. These results lead to an initial definition of disruption in ecology.  When a specific historical outcome contributes to a system's viability, disruption is the randomization of this outcome,  decreasing this viability. },
-  url={https://hal.archives-ouvertes.fr/hal-03574022}
+  url={https://hal.archives-ouvertes.fr/hal-03574022},
+  doi={10.1007/s10441-025-09496-2}
 }
 
 @Article{2016-SLN-Conclusion-Century-Organism,
@@ -1687,7 +1702,7 @@ Nous nous intéressons ensuite à la question des niveaux d'organisation, par de
 @Article{2017-Montevil-Garson-Functions,
   author    = {Montévil, Maël},
   journal   = {Science {\&} Education},
-  title     = {Philosophical Accounts of Biological Functions: Justin Garson (2016) A Critical Overview of Biological Functions. Springer International Publishing, Dordrecht. ISBN: 978-3-319-32020-5, 113 pages, price: $54.99 (paperback)},
+  title     = {Philosophical Accounts of Biological Functions: Justin Garson (2016) A Critical Overview of Biological Functions. Springer International Publishing, Dordrecht. ISBN: 978-3-319-32020-5, 113 pages, price: {\$}54.99 (paperback)},
   year      = {2017},
   day       = {26},
   issn      = {1573-1901},
