--- a/src/assets/bib/2012-LMK-No-Entailing-Laws-Enablement.bib
+++ b/src/assets/bib/2012-LMK-No-Entailing-Laws-Enablement.bib
@@ -29,7 +29,7 @@
 		  from life to life. The purpose of this paper is the
 		  integration of variation and diversity in a sound concep-
 		  tual frame and situate unpredictability at a novel
-		  theoretical level, that of the very phase space. Our
+		  theoretical level, that of the very phase space.<br> Our
 		  argument will be carried on in close comparisons with
 		  physics and the mathematical constructions of phase spaces
 		  in that discipline. The role of (theoretical) symmetries as
