--- a/src/assets/bib/2014-BSQ-Tissues-Collagen-Time.bib
+++ b/src/assets/bib/2014-BSQ-Tissues-Collagen-Time.bib
@@ -27,8 +27,8 @@
 		  collagen gels suggests that local organization of the
 		  matrix may guide morphogenesis. Here, we quantified the
 		  effects of both bulk material stiffness and local collagen
-		  fiber arrangement on epithelial morphogenesis. Results: The
-		  formation of ducts and acini from single cells and the
+		  fiber arrangement on epithelial morphogenesis.<br> Results:
+		  The formation of ducts and acini from single cells and the
 		  reorganization of the collagen fiber network were
 		  quantified using time-lapse confocal microscopy. MCF10A
 		  cells organized the surrounding collagen fibers during the
@@ -44,12 +44,12 @@
 		  elongation and branching, which was significantly
 		  correlated with fiber organization. In contrast, changes in
 		  bulk stiffness were not a strong predictor of this
-		  epithelial morphology. Conclusions: Localized regions of
-		  collagen fiber alignment are required for ductal elongation
-		  and branching suggesting the importance of local mechanical
-		  anisotropy in mammary epithelial morphogenesis. Similar
-		  principles may govern the morphology of branching and
-		  budding in other tissues and organs.},
+		  epithelial morphology.<br> Conclusions: Localized regions
+		  of collagen fiber alignment are required for ductal
+		  elongation and branching suggesting the importance of local
+		  mechanical anisotropy in mammary epithelial morphogenesis.
+		  Similar principles may govern the morphology of branching
+		  and budding in other tissues and organs.},
   doi		= {10.1371/journal.pone.0093325},
   editor	= {Christophe Egles},
   eprint	= {https://montevil.org/assets/pdf/2014-BSQ-Tissues-Collagen-Time.pdf},
