--- a/src/assets/bib/2020-MAS-Morphometric-Clarity-Bpa.bib
+++ b/src/assets/bib/2020-MAS-Morphometric-Clarity-Bpa.bib
@@ -20,7 +20,7 @@
 		  established semiquantitative methods in two laboratories,
 		  b) develop a software tool for automatic evaluation of
 		  quantifiable aspects of the mammary ductal tree, and c)
-		  compare those methods. Conclusions: Both the
+		  compare those methods.<br> Conclusions: Both the
 		  semiquantitative and the quantitative methods revealed
 		  nonmonotonic effects of BPA. The quantitative unsupervised
 		  analysis used 91 measurements and produced the most
