--- a/src/assets/bib/2022-Postface-Giorgini.bib
+++ b/src/assets/bib/2022-Postface-Giorgini.bib
@@ -18,14 +18,12 @@
 		  composants des systèmes co-élabore la performance du
 		  tout, en dehors de tout pilotage et contrôle centralisé
 		  et extérieur au système. Elle réinvente fondamentalement
-		  la relation sujet-objet.
-		  
-		  La révolution contributive en cours est globale et
-		  profonde. Elle apparaît comme une solution possible à la
-		  crise économique, écologique et politique qui frappe les
-		  sociétés contemporaines, elle concerne tout le champ
-		  épistémologique, des sciences jusqu’aux organisations
-		  sociales (épistémè).},
+		  la relation sujet-objet. <br> La révolution contributive
+		  en cours est globale et profonde. Elle apparaît comme une
+		  solution possible à la crise économique, écologique et
+		  politique qui frappe les sociétés contemporaines, elle
+		  concerne tout le champ épistémologique, des sciences
+		  jusqu’aux organisations sociales (épistémè).},
   booktitle	= {La révolution contributive},
   collection	= {Innovation et technologies},
   language	= {fr},
