--- a/src/assets/bib/2014-LMP-Incompressible-Complexite.bib
+++ b/src/assets/bib/2014-LMP-Incompressible-Complexite.bib
@@ -23,28 +23,28 @@
 		  des éléments de cette simplification qui choisit,
 		  transforme, organise l'action dans le monde, dont nous
 		  parlerons. On pourrait alors donner un sens historique à
-		  la notion de simplexité dans (Berthoz, 2009): - c'est le
-		  simple qui résulte d'une histoire complexe, - du simple
-		  qui n'est jamais élémentaire (atomique, irréductible).
-		  En physique, cette histoire peut être remplacée par une
-		  dynamique de modèles mathématiques qui aide à passer
-		  d'un système d'interactions locales, très complexe, à
-		  une situation globale, relativement plus simple, limite de
-		  la dynamique considérée. Ces dynamiques permettent de
-		  traiter les transitions critiques. Dans ce cas aussi, mais
-		  de façon fortement mathématisée, l'intégration globale
-		  de réseaux localement intelligibles, mais trop riches pour
-		  être saisis comme un tout, peut proposer une autre exemple
-		  de simplexité, plus technique, un exemple qui trouve son
-		  sens à la limite asymptotique. Les méthodes de
-		  renormalisation, auxquels nous ferons informellement
-		  référence, en donnent un aperçu de grande puissance
-		  physico-mathématique. Nous considérons le passage de
-		  l'analyse mathématique de la criticité physique à
-		  l'analyse du biologique, en tant que situation critique
-		  étendue, une transition conceptuelle possible de la
-		  théorisation physique à celle de l'état vivant de la
-		  matière.},
+		  la notion de simplexité dans (Berthoz, 2009): <br> - c'est
+		  le simple qui résulte d'une histoire complexe, <br> - du
+		  simple qui n'est jamais élémentaire (atomique,
+		  irréductible).<br> En physique, cette histoire peut être
+		  remplacée par une dynamique de modèles mathématiques qui
+		  aide à passer d'un système d'interactions locales, très
+		  complexe, à une situation globale, relativement plus
+		  simple, limite de la dynamique considérée. Ces dynamiques
+		  permettent de traiter les transitions critiques. Dans ce
+		  cas aussi, mais de façon fortement mathématisée,
+		  l'intégration globale de réseaux localement
+		  intelligibles, mais trop riches pour être saisis comme un
+		  tout, peut proposer une autre exemple de simplexité, plus
+		  technique, un exemple qui trouve son sens à la limite
+		  asymptotique. Les méthodes de renormalisation, auxquels
+		  nous ferons informellement référence, en donnent un
+		  aperçu de grande puissance physico-mathématique. Nous
+		  considérons le passage de l'analyse mathématique de la
+		  criticité physique à l'analyse du biologique, en tant que
+		  situation critique étendue, une transition conceptuelle
+		  possible de la théorisation physique à celle de l'état
+		  vivant de la matière.},
   booktitle	= {Complexité-Simplexité},
   doi		= {10.4000/books.cdf.3363},
   eprint	= {https://montevil.org/assets/pdf/2014-LMP-Incompressible-Complexite.pdf},
