--- a/BIB/bibM.bib
+++ b/BIB/bibM.bib
@@ -4,8 +4,9 @@ journal = {Reproductive Toxicology},
 volume = {135},
 pages = {108929},
 year = {2025},
+month={8},
 issn = {0890-6238},
-doi = {https://doi.org/10.1016/j.reprotox.2025.108929},
+doi = {10.1016/j.reprotox.2025.108929},
 url = {https://www.sciencedirect.com/science/article/pii/S0890623825001005},
 author = {Maël Montévil and Cheryl Schaeberle and Julie Boberg and Sofie Christiansen and Ana M. Soto},
 keywords = {Ketoconazole, Diethylstilbestrol, endocrine disruptors, perinatal exposure, mammary gland whole mount},
@@ -14,18 +15,21 @@ abstract = {Endocrine disruptors alter mammary gland development, impair the abi
 
 @InBook{2024-Montevil-Jeu-Biologie,
   author    = {Montévil, Maël},
-  editor    = {Franck Cormerais and Vincent Puig and Mathieu Triclot},
  title     = {Le vivant et le jeu},
-  year      = {2024},
-  month={12},
-  day={1},
-  booktitle = {Jeux, gestes et savoirs},
-  language  = {fr},
-  pusblisher={C&F Editions},
-  collection={Collection du nouveau monde industriel},
+  booktitle        = {Jeux, gestes \& savoirs: Jouer, une puissance d'émancipation dans un monde de calcul},
+  editor       = {Mathieu Triclot and Vincent Puig and Franck Cormerais},
+  series       = {Les Entretiens du nouveau monde industriel (ENMI)},
+  volume       = {17},                   
+  year         = {2024},
+  publisher    = {C\&F\,Éditions},
+  address      = {Caen, France},
+  pages        = {286},
+  day=28,
+  month=11,
+  isbn         = {978‑2‑37662‑089‑1},
   page ={87-98},
   abstract={La dix-septième édition des Entretiens du Nouveau Monde Industriel apporte un éclairage théorique, historique et épistémologique sur le pouvoir du jeu. Cet ouvrage mobilise les apports théoriques des sciences du vivant, de la psychologie, de l'économie, de la philosophie ou des sciences du jeu, aussi bien que des comptes-rendus d'expérimentations de terrain.},
-  isbn={9782376620891}
+  url={https://cfeditions.com/jeux-gestes-savoirs/}
 }
 
 @article{2025-Stiegler-Montevil-Entropy, 
@@ -159,13 +163,18 @@ pas de soi » mais « vient de l’autre, ou relève de l’autre en lui ».},
   author= {Ma{\"e}l Mont{\'e}vil},
   title= {Comment le hasard façonne le vivant ?},
   language  = {fr},
-  year= {to appear},
-  booktitle= {Figures du Hasard },
-editor={Anne Duprat and Fiona Mcintosh-Varjabédian and Anne-Gaëlle Weber and Alison James and Divya Dwivedi},
+   booktitle    = {Le hasard. Littérature, arts, sciences, philosophie},
+  editor       = {Anne Duprat and Fiona McIntosh‑Varjabédian and Anne‑Gaëlle Weber and Alison James},
+  publisher    = {CNRS Éditions},
+  address      = {Paris, France},
+  year         = {2025},
+  month        = apr,
+  pages        = {505-516},  
+  isbn         = {978-2-271-14455-3},
+  url          = {https://www.cnrseditions.fr/catalogue/philosophie-et-histoire-des-idees/le-hasard/},
 abstract={La physique possède plusieurs concepts de hasard qui reposent néanmoins tous sur l'idée que les possibilités sont données d'avance. En revanche, un nombre croissant de biologistes théoriciens cherchent à introduire la notion de nouvelles possibilités, c'est-à-dire des modifications de l'espace des possibles - une idée déjà discutée par Bergson et qui n'a pas été véritablement poursuivie scientifiquement jusqu'à récemment (sauf, en un sens, dans la systématique, c'est-à-dire la méthode de classification des êtres vivants). 
 <br>
-Alors, le hasard opère au niveau des possibilités elles-mêmes et est à la base de l'historicité des objets biologiques. Nous soulignons que ce concept de hasard n'est pas seulement pertinent lorsqu'on cherche à prédire l'avenir. Au contraire, il façonne les organisations biologiques et les écosystèmes. À titre d'illustration, nous soutenons qu'une question cruciale de l'Anthropocène est la disruption des organisations biologiques que l'histoire naturelle a structurées, conduisant à un effondrement des possibilités biologiques.},
-publisher={CNRS éditions}
+Alors, le hasard opère au niveau des possibilités elles-mêmes et est à la base de l'historicité des objets biologiques. Nous soulignons que ce concept de hasard n'est pas seulement pertinent lorsqu'on cherche à prédire l'avenir. Au contraire, il façonne les organisations biologiques et les écosystèmes. À titre d'illustration, nous soutenons qu'une question cruciale de l'Anthropocène est la disruption des organisations biologiques que l'histoire naturelle a structurées, conduisant à un effondrement des possibilités biologiques.}
 }
 
 @inBook{2023-Montevil-disruption-developpement,
@@ -210,8 +219,7 @@ Bringing together scholars who knew Stiegler, including Shaj Mohan, Achille Mbem
 
 @InBook{2023-Montevil-chance-randomness-biology,
   author    = {Ma{\"e}l Mont{\'e}vil},
-  editor    = {Anne Duprat and Alison James and Divya Dwivedi},
-  publisher = {Taylor & Francis},
+  editor    = {Anne Duprat and Alison James},
   title     = {How does randomness shape the living?},
   year      = {2025},
   day       = {31},
@@ -220,9 +228,14 @@ Bringing together scholars who knew Stiegler, including Shaj Mohan, Achille Mbem
   abstract  = {Physics has several concepts of randomness that build on the idea that the possibilities are pre-given. By contrast, an increasing number of theoretical biologists attempt to introduce new possibilities, that is to say, changes of possibility space – an idea already discussed by Bergson and that was not genuinely pursued scientifically until recently (except, in a sense, in systematics, i.e, the method to classify living beings). 
 <br>
 Then, randomness operates at the level of possibilities themselves and is the basis of the historicity of biological objects. We emphasize that this concept of randomness is not only relevant when aiming to predict the future. Instead, it shapes biological organizations and ecosystems. As an illustration, we argue that a critical issue of the Anthropocene is the disruption of the biological organizations that natural history has shaped, leading to a collapse of biological possibilities.},
-  booktitle = {Figures of Chance II Chance in Theory and Practice},
+  booktitle = {Figures of Chance II Chance: in Theory and Practice},
   language  = {en},
   ppn_gvk   = {1904850855},
+     publisher    = {Routledge},
+  address      = {London / New York},
+    doi          = {10.4324/9781003329060-4},
+      url          = {https://www.routledge.com/Figures-of-Chance-II-Chance-in-Theory-and-Practice/Duprat-James/p/book/9781032358659},
+       pages        = {477--531}
 }
 
 
@@ -260,6 +273,7 @@ works integrate.},
   ppn_gvk   = {1885370008},
   subtitle  = {Memories of the future},
   url       = {https://www.bloomsbury.com/uk/bernard-stiegler-9781350410459/},
+    doi          = {10.5040/9781350410473}
 }
 
 
@@ -380,7 +394,6 @@ We then propose to reinterpret the computer, no longer as a Turing machine but a
   eprint    = {https://montevil.org/assets/pdf/2021-Montevil-episteme-computational-empiricism.pdf},
  note    = {\url{https://montevil.org/publications/articles/2021-Montevil-episteme-computational-empiricism/}},
   keywords  = {theory, statistical tests, empiricism, models, computation},
-  url={https://hal.archives-ouvertes.fr/hal-03574022}
 }
 
 
@@ -451,14 +464,21 @@ abstract = { The free-energy principle (FEP) furnishes a computational, physical
 }
 
 @article{2025-Montevil-Disruption-Phenology,
-author = {Montévil, Maël},
-title = {Disruption of biological processes in the Anthropocene: the case of phenological mismatch},
-journal = {Acta Biotheoretica },
-year = {2025},
-abstract = {Biologists increasingly report anthropogenic disruptions of both organisms and ecosystems, suggesting that these processes are a fundamental, qualitative component of the Anthropocene crisis, seemingly generating disorder. Nonetheless, the notion of disruption has not yet been theorized as such in biology. To progress on this matter, we build on a specific case. Relatively minor temperature changes disrupt plant-pollinator synchrony, tearing apart the web of life. Understanding this phenomenon requires a specific rationale since models describing them use both historical and systemic reasoning. Specifically, history justifies that the system is initially in a narrow part of the possibility space where it is viable, and the disruption randomizes this configuration. Building on this rationale, we develop a formal framework inspired by Boltzmann's entropy. This framework defines the randomization of the system and leads to analyze its consequences systematically. Notably, maximum randomization does not lead to the complete collapse of the ecosystem. Moreover, pollinators' robustness mostly increases viability for low randomizations, while resilience enhances viability after high randomizations. Applying this framework to empirical networks, we show historical trends depending on latitude, providing further evidence of climate change's impact on ecosystems via phenology changes. These results lead to an initial definition of disruption in ecology.  When a specific historical outcome contributes to a system's viability, disruption is the randomization of this outcome,  decreasing this viability. },
-  url={https://hal.archives-ouvertes.fr/hal-03574022},
-  doi={10.1007/s10441-025-09496-2}
+author={Montévil, Maël},
+title={Disruption of Biological Processes in the Anthropocene: The Case of Phenological Mismatch},
+journal={Acta Biotheoretica},
+year={2025},
+month={Mar},
+day={22},
+volume={73},
+number={2},
+pages={5},
+abstract={Biologists are increasingly documenting anthropogenic disruptions, both at the organism and ecosystem levels, indicating that these disruptions are a fundamental, qualitative component of the Anthropocene. Nonetheless, the notion of disruption has yet to be theorized. Informally, disruptions are direct or indirect consequences of specific causes that impair the contribution of parts of living systems to their ability to last over time. To progress in this theorization, we work here on a particular case. Even relatively minor temperature changes can significantly impact plant-pollinator synchrony, disrupting mutualistic interaction networks. Understanding this phenomenon requires a specific rationale since models describing it use both historical and systemic reasoning. Specifically, history justifies that the ecosystem initially exists in a very narrow part of the possibility space where all its populations are viable, and the disruption leads to a more generic configuration where some populations are not viable. Building on this rationale, we develop a mathematical schema inspired by Boltzmann's entropy, apply it to this situation, and provide a technical definition of disruption.},
+issn={1572-8358},
+doi={10.1007/s10441-025-09496-2}
 }
+
+
 
 @Article{2016-SLN-Conclusion-Century-Organism,
   author    = {Ana M. Soto and G. Longo and P.-A. Miquel and M. Montevil and Mossio, Matteo and N. Perret and A. Pocheville and Carlos Sonnenschein},
