--- a/src/assets/bib/2023-Montevil-Stiegler.bib
+++ b/src/assets/bib/2023-Montevil-Stiegler.bib
@@ -67,5 +67,6 @@
   pagetotal	= {249},
   ppn_gvk	= {1885370008},
   subtitle	= {Memories of the future},
-  url		= {https://www.bloomsbury.com/uk/bernard-stiegler-9781350410459/}
+  url		= {https://www.bloomsbury.com/uk/bernard-stiegler-9781350410459/},
+  doi		= {10.5040/9781350410473}
 }
