--- a/src/assets/bib/2025-MSBCS-Quantitative-Endocrine-Disruption.bib
+++ b/src/assets/bib/2025-MSBCS-Quantitative-Endocrine-Disruption.bib
@@ -7,8 +7,9 @@
   volume	= {135},
   pages		= {108929},
   year		= {2025},
+  month		= {8},
   issn		= {0890-6238},
-  doi		= {https://doi.org/10.1016/j.reprotox.2025.108929},
+  doi		= {10.1016/j.reprotox.2025.108929},
   url		= {https://www.sciencedirect.com/science/article/pii/S0890623825001005},
   author	= {Maël Montévil and Cheryl Schaeberle and Julie Boberg and
 		  Sofie Christiansen and Ana M. Soto},
