--- a/src/assets/bib/2025-Montevil-Disruption-Phenology.bib
+++ b/src/assets/bib/2025-Montevil-Disruption-Phenology.bib
@@ -1,40 +1,37 @@
 
 @Article{	  2025-montevil-disruption-phenology,
   author	= {Montévil, Maël},
-  title		= {Disruption of biological processes in the Anthropocene:
-		  the case of phenological mismatch},
-  journal	= {Acta Biotheoretica },
+  title		= {Disruption of Biological Processes in the Anthropocene:
+		  The Case of Phenological Mismatch},
+  journal	= {Acta Biotheoretica},
   year		= {2025},
-  abstract	= {Biologists increasingly report anthropogenic disruptions
-		  of both organisms and ecosystems, suggesting that these
-		  processes are a fundamental, qualitative component of the
-		  Anthropocene crisis, seemingly generating disorder.
-		  Nonetheless, the notion of disruption has not yet been
-		  theorized as such in biology. To progress on this matter,
-		  we build on a specific case. Relatively minor temperature
-		  changes disrupt plant-pollinator synchrony, tearing apart
-		  the web of life. Understanding this phenomenon requires a
-		  specific rationale since models describing them use both
-		  historical and systemic reasoning. Specifically, history
-		  justifies that the system is initially in a narrow part of
-		  the possibility space where it is viable, and the
-		  disruption randomizes this configuration. Building on this
-		  rationale, we develop a formal framework inspired by
-		  Boltzmann's entropy. This framework defines the
-		  randomization of the system and leads to analyze its
-		  consequences systematically. Notably, maximum randomization
-		  does not lead to the complete collapse of the ecosystem.
-		  Moreover, pollinators' robustness mostly increases
-		  viability for low randomizations, while resilience enhances
-		  viability after high randomizations. Applying this
-		  framework to empirical networks, we show historical trends
-		  depending on latitude, providing further evidence of
-		  climate change's impact on ecosystems via phenology
-		  changes. These results lead to an initial definition of
-		  disruption in ecology. When a specific historical outcome
-		  contributes to a system's viability, disruption is the
-		  randomization of this outcome, decreasing this viability.
-		  },
-  url		= {https://hal.archives-ouvertes.fr/hal-03574022},
+  month		= {Mar},
+  day		= {22},
+  volume	= {73},
+  number	= {2},
+  pages		= {5},
+  abstract	= {Biologists are increasingly documenting anthropogenic
+		  disruptions, both at the organism and ecosystem levels,
+		  indicating that these disruptions are a fundamental,
+		  qualitative component of the Anthropocene. Nonetheless, the
+		  notion of disruption has yet to be theorized. Informally,
+		  disruptions are direct or indirect consequences of specific
+		  causes that impair the contribution of parts of living
+		  systems to their ability to last over time. To progress in
+		  this theorization, we work here on a particular case. Even
+		  relatively minor temperature changes can significantly
+		  impact plant-pollinator synchrony, disrupting mutualistic
+		  interaction networks. Understanding this phenomenon
+		  requires a specific rationale since models describing it
+		  use both historical and systemic reasoning. Specifically,
+		  history justifies that the ecosystem initially exists in a
+		  very narrow part of the possibility space where all its
+		  populations are viable, and the disruption leads to a more
+		  generic configuration where some populations are not
+		  viable. Building on this rationale, we develop a
+		  mathematical schema inspired by Boltzmann's entropy, apply
+		  it to this situation, and provide a technical definition of
+		  disruption.},
+  issn		= {1572-8358},
   doi		= {10.1007/s10441-025-09496-2}
 }
