--- a/src/assets/bib/bibM.bib
+++ b/src/assets/bib/bibM.bib
@@ -1,3 +1,28 @@
+
+@InBook{2026-Montevil-individuation-desindividuation,
+  author    = {Montévil, Maël},
+ title     = {Individuation et désindividuation},
+  booktitle        = {Atlas des Sciences de la culture},
+  editor       = {Lia Kurts-Wöste and Jean Lassègue and Régis Missire and Vincent Michaud-Laine and Muriel van Vliet},
+  year         = {submitted},
+  publisher    = {Classiques Garnier},
+  abstract={La notion d’individu a une grande importance en sciences sociales, notamment à travers la doctrine de l’individualisme méthodologique qui se propose de comprendre les phénomènes sociaux sur la seule base des individus et de leurs interactions, un point de vue atomiste donc. Cette notion renvoie à deux idées liées mais distinctes. Tout d’abord, les individus forment des unités à peu près insécables, comme le terme l’indique. De plus, les individus sont distincts les uns des autres, ainsi que séparables, au moins analytiquement, de leurs contextes. L’individuation renvoie alors à deux questions. Tout d’abord, sur quelles bases identifier les différents individus et les distinguer de leurs contextes ? L’individuation est alors la question théorique et épistémologique de l’identification des différents individus. Deuxièmement, notamment à la suite de Simondon, la notion d’individuation peut être une manière de dépasser l’atomisme inhérent au concept d’individu, en posant l’individuation comme première par rapport aux individus. Alors, l’individuation est le processus qui devient le centre de l’intérêt théorique. }
+}
+
+
+@article{2025-BDMMP-Without-Conditions,
+title = {For One Another, Without Conditions: On Palestine and Ukraine},
+journal = {Philosophy World Democracy},
+year = {2025},
+month={6},
+day={6},
+url = {https://www.philosophy-world-democracy.org/articles-1/for-one-another-without-conditions-on-palestine-and-ukraine},
+author = {Natalya Bekhta and Divya Dwivedi and Shaj Mohan and Maël Montévil and Ivana Perica},
+abstract = {Do the Palestinian people and the Ukrainian people understand one another? Do they support one another? What are the similarities and the distinctions between these two conditions of oppression? The question of Ukraine and Palestine are one for this reason; no condition, no argument, no geo-poli-technique can justify what is taking place in either regions. Further, none of the so-called solutions to Ukraine—divide it between Russia, Europe and America—is acceptable because the very existence of freedom, which is what people are, what each individual is, is going to be thus divided and partitioned, and hence annihilated.}
+}
+
+
+
 @article{2025-MSBCS-Quantitative-Endocrine-Disruption,
 title = {Quantitative analysis of endocrine disruption by ketoconazole and diethylstilbestrol in rat mammary gland development},
 journal = {Reproductive Toxicology},
